# opera

./: .gitmodules  .travis.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
examples/: dump.rs  ogginfo.rs  vectors.rs
opus-rfc8251-sys/: Cargo.toml  build.rs  lib.rs
src/: channel.rs  ec.rs  error.rs  lib.rs  multipacket.rs  ogg.rs  packet.rs  sample.rs  slice_ext.rs
src/celt/: mod.rs
src/silk/: frame.rs  mod.rs
