[package]
name = "opi"
version = "0.0.0"
authors = ["nuew <code@nuew.net>"]
edition = "2018" # not sure about this, TODO
description = "A pure-rust Opus decoding library"
repository = "https://github.com/nuew/opi"
readme = "README.md"
keywords = ["ogg", "opus", "decoder", "audio", "codec"]
categories = ["compression", "multimedia::encoding", "multimedia::audio"]
license = "ISC"

[badges]
travis-ci = { repository = "nuew/opi", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1"
ogg = { version = "0.7", optional = true }

[dev-dependencies]
criterion = "0.3"
opus-rfc8251-sys = { version = "1", path = "./opus-rfc8251-sys" }
rand = "0.7"

[features]
default = ["ogg"]
ogg_async = ["ogg/async"]

[workspace]
members = ["opus-rfc8251-sys"]

[[example]]
name = "ogginfo"
required-features = ["ogg"]
