[package]
name = "opi"
version = "0.0.0"
authors = ["nuew <code@nuew.net>"]
edition = "2018"
description = "A pure-rust Opus decoding library"
repository = "https://github.com/nuew/opi"
readme = "README.md"
keywords = ["ogg", "opus", "decoder", "audio", "codec"]
categories = ["compression", "multimedia::encoding", "multimedia::audio"]
license = "ISC"

[badges]
travis-ci = { repository = "nuew/opi", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
byteorder = "1"
ogg = { version = "0.7", optional = true }

[dev-dependencies]
opus-rfc8251-sys = { version = "1", path = "./opus-rfc8251-sys"}

[features]
default = ["ogg"]
ogg_async = ["ogg/async"]

[workspace]
members = ["opus-rfc8251-sys"]
